--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Wavy Sounds</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./glitch.scss">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
     <link rel="icon" type="image/x-icon/png" href="Logo Wavy Sounds.png">
 
@@ -23,16 +22,16 @@
         }
     </style>
     <div class="fixed">
-        <h5>MUSIC: THE TERRITORY BY <a style="top: 110%; right: -40%; left: 50%;" href="https://www.instagram.com/theblazeprod/" class="glitch" data-glitch="THE BLAZE">THE BLAZE</a></h5>
+        <h5>MUSIC: THE TERRITORY BY <a style="top: 110%; right: -40%; left: 50%;" href="https://www.instagram.com/theblazeprod/" target="blank" class="glitch" data-glitch="THE BLAZE">THE BLAZE</a></h5>
     </div>
     <div class="row">
         <div class="column">
-            <h3>SPECIAL THANKS TO <a style="right: -40%; left: 90%;" href="https://www.instagram.com/theblazeprod/" class="glitch" data-glitch="THE BLAZE">THE BLAZE</a></h3>
+            <h3>SPECIAL THANKS TO <a style="right: -40%; left: 90%;" href="https://www.instagram.com/theblazeprod/" target="blank" class="glitch" data-glitch="THE BLAZE">THE BLAZE</a></h3>
         </div>
     </div>
     <div class="row">
         <div class="column1">
-            <h4>DEVELOPED BY <a style="right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
+            <h4>DEVELOPED BY <a style="right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" target="blank" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
         </div>
     </div>
     <h2 class="message">PRESS PLAY</h2>
