--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
         <div class="column1">
-            <h4>DEVELOPED BY <a style="right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" target="blank" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
+            <h4>DEVELOPED BY <a style="z-index: -1; right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" target="blank" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
         </div>
     </div>
     <h2 class="message">PRESS PLAY</h2>
