--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Wavy Sounds</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
-    <link rel="icon" type="image/x-icon/png" href="Logo Wavy Sounds.png">
+    <link rel="icon" type="image/x-icon/png" href="./img/Logo Wavy Sounds.png">
 
 </head>
 
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
         <div class="column1">
-            <h4>DEVELOPED BY <a style="z-index: -1; right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" target="blank" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
+            <h4>DEVELOPED BY <a style="z-index: -10; right: -80%; left: 70%; top: 50%;" href="https://codepen.io/houssem-lachtar" target="blank" class="glitch" data-glitch="HOUSSEM LACHTAR">HOUSSEM LACHTAR</a></h4>
         </div>
     </div>
     <h2 class="message">PRESS PLAY</h2>
