--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <style>
         div.fixed {
-            position: fixed;
-            bottom: 25px;
-            margin-left: 38vw;
-            width: 235px;
-            font-size: xx-small;
-            text-align: center;
+            position: absolute;
+    bottom: 25px;
+    font-size: unset;
+    text-align: center;
+    width: 102%;
+    padding: 0px;
+    margin-left: -0.9rem;
         }
     </style>
     <div class="fixed">
